--- a/navbar.css
+++ b/navbar.css
@@ -2,6 +2,68 @@
 
 /*font-family: 'Inter', sans-serif;*/
 
+/* BASE CASES */
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    scroll-behavior: smooth; /* keep?*/
+
+}
+
+body {
+    margin:var(--header-height) 0 0 0;
+    font-family: var(--body-font);
+    font-size: var(--text-font-size);
+    background-color: var(--body-col);
+    color: var(--text-col);
+}
+
+/* lists*/
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+/* responsive */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* REUSABLE CLASSES (check later) */
+
+.section {
+    padding: 4.5rem 0 2rem;
+}
+
+.section__title {
+    font-size: var(--h1-font-size);
+    color: var(--title-col);
+    text-align: center;
+    margin-bottom: 1.5rem;
+
+}
+
+/*
+.section__height {
+    height: ;
+}
+*/
+
+/* ========= LAYOUT ========== */
+.container {
+    max-width: 968px; /* medium size */
+    margin-left: 1rem;
+    margin-right: 1rem; /* checar*/
+
+}
 /* VARIABLESSS */
 
 :root {
@@ -38,6 +100,6 @@
     :root{
         --h1-font-size: 2.2rem;
         --text-font-size: 1rem;
-         
+
     }
 }
