--- a/navbar.css
+++ b/navbar.css
@@ -51,11 +51,11 @@ img {
 
 }
 
-/*
+
 .section__height {
-    height: ;
+    height: 100vh;
 }
-*/
+
 
 /* ========= LAYOUT ========== */
 .container {
@@ -85,7 +85,7 @@ img {
 
     --h1-font-size: 1.5rem;
     --text-font-size: 1rem;
-    --petite-font-size: 0.5rem;
+    --petite-font-size: 0.75rem;
 
     /* z index and others */
     --z-tooltip: ;
@@ -103,3 +103,76 @@ img {
 
     }
 }
+
+
+/* ================ HEADER =================== */
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--container-col);
+}
+
+/* ===================NAV =====================*/
+
+.nav {
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__img {
+    width: 32px; /* cambiar */
+}
+
+.nav__logo {
+    color: var(--title-col);
+    font-weight: 600;
+}
+
+.nav__list,
+.nav__link {
+    display: flex;
+}
+
+.nav__link {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 0.25rem;
+    color: var(--title-col);
+    font-weight: 400;
+}
+
+.nav__list {
+    justify-content: space-between;
+}
+
+.nav__name {
+    font-size: var(--petite-font-size);
+}
+
+.nav__icon {
+    font-size: 1.5rem;
+}
+
+
+@media screen and (max-width: 767px) { /* iPad size */
+    .nav__menu{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: var(--container-col);
+        box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15); /* cambiar */
+        width: 100%;
+        height: 4rem;
+        padding: 0 1rem;
+        display: grid;
+        align-content: center;
+        border-radius: 1.25rem 1.25rem 0 0;
+        transition: 0.4s ease;
+    }
+}
+
