--- a/navbar.css
+++ b/navbar.css
@@ -147,7 +147,7 @@ img {
 }
 
 .nav__list {
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .nav__name {
@@ -158,6 +158,12 @@ img {
     font-size: 1.5rem;
 }
 
+/* ====================== ACTIVE LINK  ===================== */
+.active-link{
+    position: relative;
+    color: #ee2737;
+    transition: 0.35s;
+}
 
 @media screen and (max-width: 767px) { /* iPad size */
     .nav__menu{
@@ -176,3 +182,44 @@ img {
     }
 }
 
+/* ======================= CHANGE BG HEADER JS ================== */
+.scroll-header {
+    box-shadow: 0 1px 12px hsla(var(--hue), var(--sat), 15%, 0.15); /* change if necessary */
+}
+
+/* ================= NON-MINIMALIST MEDIA-QUERY ADDITION =======*/
+
+/* small devices */
+@media screen and (max-width: 462px){
+    .nav__name {
+        display: none;
+    }
+}
+
+/* large phones */
+@media screen and (min-width: 576px){
+    .nav__list {
+        justify-content: center;
+        column-gap: 3rem;
+    }
+}
+
+/* ipads */
+@media screen and (min-width: 767px){
+    body{
+        margin: 0; /* optimizes space top the top */
+    }
+
+    .section{
+        padding: 7rem 0 2rem;
+
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem); /* approx 4.5 rem*/
+    }
+
+    .nav__img {
+        margin-top: 2rem;
+    }
+}
