--- a/pit/pit.css
+++ b/pit/pit.css
@@ -28,8 +28,12 @@ body {
     padding: 3rem;
     margin: 0 1rem;
     border-radius: 1rem;
+    
 }
 
+div .team-number {
+    text-align: center;
+}
 .container header > h1 {
     font-size: 3rem;
     font-weight: 600;
@@ -46,6 +50,7 @@ body {
     /*background-color: bisque;*/
     position: relative;
     min-height: 490px;
+    justify-content: center;
 }
 
 .container form .mobility {
@@ -71,7 +76,8 @@ body {
 form .fields .input-field {
     display: flex;
     flex-direction: column;
-    width: calc(100%/ 3 - 1rem);
+    width: calc(100%/ 2 - 1rem);
+    height: 100px;
 }
 
 input {
@@ -94,4 +100,25 @@ label {
     font-weight: 500;
     color: black;
 
+}
+
+.container button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+    max-width: 10rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: white;
+    border-radius: 5px;
+    margin: 0 3rem;
+    background-color: #ee2737;
+}
+
+div .buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
