--- a/pit/pit.css
+++ b/pit/pit.css
@@ -138,4 +138,86 @@ div .buttons {
     justify-content: center;
 }
 
+/* =============== radio groups ======================= */
+
+forms .input-field .radio-group {
+    display: inline-flex;
+    flex-direction: column;
+}
+
+/*
+select {
+    display: inline-block;
+    background-color: rgb(117, 13, 13);
+    color: #fff;
+    border: 2px solid #dd1212;
+    border-radius: 10px;
+    width: 200px;
+    height: 35px;
+    font-size: 16px;
+    box-shadow:0 0 30px 4px rgba(0, 0, 0, 0.652);
+    margin: 10px;
+
+}
+
+select:hover {
+    background-color: rgb(212, 47, 47);
+    color: #0c0909;
+    border-radius: 10px;
+    width: 200px;
+    height: 40px;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+*/
+#java {
+    border-radius: 50px;
+    width: 20px;
+  }
+
+  .programming-language-input {
+    display: none;
+
+}
+
+.programming-language-label {
+    filter: grayscale(100%);
+    height: 45px;
+    width: auto;
+    margin-top: 2px;
+
+}
+
+.programming-language-label:hover {
+    filter: grayscale(0%);
+    height: 55px;
+    transition: height .5s, filter .5s;
+    width: auto;
+
+}
+
+.programming-language-label:active {
+    height: 40px;
+    width: auto;
+}
+
+.radio-language-options {
+    margin-top: 1rem;
+    display: block;
+    align-self: center;
+    /*background-color: #000000;*/
+    width: 300px;
+    height: 60px;
+    /*border-radius: 50px; */
+    position: static;
+    /*box-shadow:0 0 30px 4px rgba(0, 0, 0, 0.458);*/
+    
+}
+
+.radio-language-options:hover {
+    /*box-shadow:0 0 30px 4px rgba(0, 0, 0, 0.59);*/
+    width: 310px;
+    height: 70px;
+}
+
 
