--- a/pit/pit.css
+++ b/pit/pit.css
@@ -69,12 +69,14 @@ div .team-number {
     background-color: white;
 }
 
+/*
 .container form .form {
     position: absolute;
     background-color: white;
     /*transition: 0.3s ease;*/
-}
 
+
+/*
 .container form .form.second {
     opacity: 0;
     pointer-events: none;
@@ -84,6 +86,7 @@ div .team-number {
     opacity: 1;
     pointer-events: auto;
 }
+*/
 .container form .title {
     display: block;
     margin-top: 8px;
